Fix header alignment. Add wrapping elements for icons.
Former-commit-id: 7b691116c734e5dc1bc681bd39e18d63417331c9

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -34,13 +34,13 @@
 
 .ring2-header__user-menu {
   float: right;
-  margin-right: -1 * $ring-unit * 3;
 }
 
 .ring2-header__menu-item,
 .ring2-header__user-menu-item {
   display: inline-block;
-  margin-right: $ring-unit * 4;
+  line-height: 1.2;
+  vertical-align: middle;
 
   a {
     color: $ring-link-color;
@@ -54,17 +54,29 @@
 }
 
 .ring2-header__user-menu-item_icon {
-  cursor: pointer;
-  fill: $ring-color-gray;
-  padding: $ring-unit;
-  margin-right: $ring-unit * 2;
+  .ring-icon {
+    cursor: pointer;
+    fill: $ring-color-gray;
+    margin-right: $ring-unit*2;
+    padding: $ring-unit;
 
-  &:hover {
-    fill: $ring-link-hover-color;
+    &:hover {
+      fill: $ring-link-hover-color;
+    }
   }
 
-  &.ring2-header__user-menu-item_active {
+  .ring-icon_blue {
     fill: $ring-color-blue;
+  }
+
+  &:last-child {
+    .ring-icon {
+      margin-right: 0;
+    }
+  }
+
+  &.ring-icon_24 {
+    padding: 0;
   }
 }
 
